Enhance security and improve API interactions by adding CSRF protection, refining authentication flow, and updating response structures across various API routes. Additionally, update environment configuration and optimize UI components for better user experience.

--- a/env.example
+++ b/env.example
@@ -7,5 +7,9 @@ NEXT_PUBLIC_API_BASE_URL=/api
 # BFF به بک‌اند اصلی
 UPSTREAM_API_BASE_URL=https://auth.wa-nezam.org
 
+# CSRF Protection
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+CSRF_SECRET=your-32-byte-random-base64-secret-here
+
 # سایر تنظیمات
 NODE_ENV=development
