--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
     "critters": "^0.0.23",
+    "embla-carousel-react": "^8.6.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.3.1"
+    "react-swipeable": "^7.0.2",
+    "tailwind-merge": "^3.3.1",
+    "use-react-slider": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
